@@ -1,3 +1,9 @@
+2009-06-17  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_mutex.c: Implement win32 and pthread mutex support.
+
+	* configure, src/Makefile.am: add --without-mutex support to configure
+
 2009-06-16  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* README: Update windows build instructions (#30).
